from typing import Any

import pytest
from httpx import AsyncClient
from sqlalchemy import text
from sqlalchemy.ext.asyncio import AsyncEngine
from syrupy.assertion import SnapshotAssertion
from syrupy.filters import props

from fakes import UNAVAILABLE_ID, FakePodcastSource

pytestmark = pytest.mark.usefixtures("live_database", "fake_upstream")

# Generated by the database, so they differ on every run.
VOLATILE = props("id", "created_at", "updated_at")


async def _count_podcasts(engine: AsyncEngine) -> int:
    async with engine.connect() as connection:
        return int(await connection.scalar(text("SELECT count(*) FROM podcasts")) or 0)


@pytest.mark.parametrize("path", ["/ingestion/bulk", "/ingestion/podcasts/1001"])
async def test_ingestion_requires_authentication(client: AsyncClient, path: str) -> None:
    response = await client.post(path)

    assert response.status_code == 401


# --- bulk ---------------------------------------------------------------------


async def test_bulk_ingestion_returns_a_summary(
    client: AsyncClient, auth_headers: dict[str, str], snapshot: SnapshotAssertion
) -> None:
    response = await client.post("/ingestion/bulk", headers=auth_headers)

    assert {"status_code": response.status_code, "body": response.json()} == snapshot


async def test_bulk_ingestion_is_idempotent(
    client: AsyncClient, auth_headers: dict[str, str], live_database: AsyncEngine
) -> None:
    await client.post("/ingestion/bulk", headers=auth_headers)

    second = (await client.post("/ingestion/bulk", headers=auth_headers)).json()

    assert (second["created"], second["unchanged"], await _count_podcasts(live_database)) == (
        0,
        2,
        2,
    )


async def test_bulk_ingestion_searches_the_requested_terms(
    client: AsyncClient, auth_headers: dict[str, str], fake_upstream: FakePodcastSource
) -> None:
    await client.post(
        "/ingestion/bulk", headers=auth_headers, json={"terms": [" punk rock "], "limit": 10}
    )

    assert fake_upstream.searched_terms == ["punk rock"]


@pytest.mark.parametrize(
    "body",
    [
        {"limit": 0},
        {"limit": 201},
        {"terms": []},
        {"terms": ["   "]},
        {"terms": ["rock"] * 21},
    ],
    ids=["limit-too-low", "limit-too-high", "no-terms", "blank-term", "too-many-terms"],
)
async def test_bulk_ingestion_rejects_invalid_requests(
    client: AsyncClient,
    auth_headers: dict[str, str],
    snapshot: SnapshotAssertion,
    body: dict[str, Any],
) -> None:
    response = await client.post("/ingestion/bulk", headers=auth_headers, json=body)

    assert {"status_code": response.status_code, "body": response.json()} == snapshot


# --- single -------------------------------------------------------------------


async def test_single_ingestion_returns_the_stored_podcast(
    client: AsyncClient, auth_headers: dict[str, str], snapshot: SnapshotAssertion
) -> None:
    response = await client.post("/ingestion/podcasts/1001", headers=auth_headers)

    assert {"status_code": response.status_code, "body": response.json()} == snapshot(
        exclude=VOLATILE
    )


async def test_single_ingestion_is_created_once_then_left_unchanged(
    client: AsyncClient, auth_headers: dict[str, str]
) -> None:
    first = await client.post("/ingestion/podcasts/1001", headers=auth_headers)

    second = await client.post("/ingestion/podcasts/1001", headers=auth_headers)

    assert (first.status_code, second.status_code, second.json()["outcome"]) == (
        201,
        200,
        "unchanged",
    )


@pytest.mark.parametrize(
    "itunes_id",
    ["9999", "1003", "abc", UNAVAILABLE_ID],
    ids=["unknown", "not-rock", "invalid-id", "source-down"],
)
async def test_single_ingestion_errors(
    client: AsyncClient,
    auth_headers: dict[str, str],
    snapshot: SnapshotAssertion,
    itunes_id: str,
) -> None:
    response = await client.post(f"/ingestion/podcasts/{itunes_id}", headers=auth_headers)

    assert {"status_code": response.status_code, "body": response.json()} == snapshot
